Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 <h4>
 <a id="update-25-december-2014" class="anchor" href="#update-25-december-2014" aria-hidden="true"><span class="octicon octicon-link"></span></a>Update 25 december 2014</h4>
 
-<p>After trying to find a way of using the default url.Query() for route PARAMeters, i decide to change the way bone is dealing with this. url.Query() is too slow for good router performance.
-So now to get the PARAMeters value in your handler, you need to use
+<p>After trying to find a way of using the default url.Query() for route Parameters, i decide to change the way bone is dealing with this. url.Query() is too slow for good router performance.
+So now to get the Parameters value in your handler, you need to use
 <code>bone.GetValue(req, key)</code> instead of <code>req.Url.Query().Get(key)</code>.
-This change give a big speed improvement for every kind of application using route PARAMeters, like ~80x faster ...
+This change give a big speed improvement for every kind of application using route Parameters, like ~80x faster ...
 Really sorry for breaking things, but i think it's worth it.  </p>
 
 <h2>
